--- a/css/main.scss
+++ b/css/main.scss
@@ -57,7 +57,7 @@ h1, h2 {
   text-align:center;
   line-height: 1.2em;
 }
-h3 {font-size: 2em;}
+h3 {font-size: 2em;line-height: 1.1em;}
 ul {
   margin-bottom:2em;
   li {
