added link to art site

--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,7 @@ font-size: 44px;
 font-family: 'Lato', Sans-Serif;
 font-size: 16px;
 */
+@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Lato:wght@300;400;700&display=swap');
 
 html, body, #page-one, #page-two, #page-three, #page-four, #page-five {
   height:auto;
@@ -11,10 +12,12 @@ html, body, #page-one, #page-two, #page-three, #page-four, #page-five {
 }
 body {
   margin:0;
-  font-family: 'Lato', Sans-Serif;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
   font-size: 20px;
   line-height: 1.1rem;
 }
+em {font-weight:bold;}
 a {
   color: #774936;
   &:hover {
